# xms

./: .clang-format  .gitignore  LICENSE  README.md  git.dierctory.bat  git.proxy.bat  git.proxy.sh
src/: CMakeLists.txt  clean.bat  open.bat  start.bat  update.bat  vcpkg.json  vcpkg_install.bat
src/assert/: XDirConfig.proto  XGateWayConfig.proto  ca.crt  main.cpp  server.crt  server.csr  server.key  test_script.py
src/auth_client/: CMakeLists.txt
src/auth_client/include/: XAuthClient.h
src/auth_client/src/: XAuthClient.cpp  main.cpp
src/auth_server/: CMakeLists.txt
src/auth_server/include/: XAuthDao.h  XAuthHandle.h  XAuthServer.h
src/auth_server/src/: XAuthDao.cpp  XAuthHandle.cpp  XAuthServer.cpp  main.cpp
src/cmake/: CommonTools.cmake  UseDoxygenDoc.cmake
src/config_client/: CMakeLists.txt
src/config_client/include/: XConfigClient.h
src/config_client/src/: XConfigClient.cpp  main.cpp
src/config_gui/: CMakeLists.txt
src/config_gui/include/: ConfigEdit.h  ConfigGui.h  CongfigGui.h  XLoginGui.h  config_gui.ui
src/config_gui/src/: ConfigEdit.cpp  ConfigGui.cpp  CongfigGui.cpp  XLoginGui.cpp  config_edit.ui  config_gui.ui  main.cpp  xlogin_gui.ui
src/config_server/: CMakeLists.txt
src/config_server/include/: ConfigDao.h  XConfigHandle.h  XConfigServer.h
src/config_server/src/: ConfigDao.cpp  XConfigHandle.cpp  XConfigServer.cpp  main.cpp
src/log_server/include/: XLogDao.h  XLogHandle.h  XLogServer.h
src/log_server/src/: XLogDao.cpp  XLogHandle.cpp  XLogServer.cpp  main.cpp
src/mysql_api/include/: LXMysql.h  LXMysql_Global.h
src/mysql_api/src/: LXMysql.cpp
src/register_client/: CMakeLists.txt
src/register_client/include/: XRegisterClient.h
src/register_client/src/: XRegisterClient.cpp  main.cpp
src/register_server/: CMakeLists.txt
src/register_server/include/: XRegisterHandle.h  XRegisterServer.h
src/register_server/src/: XRegisterHandle.cpp  XRegisterServer.cpp  main.cpp
src/watchdog/: CMakeLists.txt
src/watchdog/src/: main.cpp
src/xlog/: CMakeLists.txt
src/xlog/include/: XLog.h  XLog_Global.h
src/xlog/src/: XLog.cpp
src/xms_add_user/: CMakeLists.txt
src/xms_add_user/src/: main.cpp
src/xms_dir_service/include/: XDirHandle.h  XDirService.h
src/xms_dir_service/src/: XDirHandle.cpp  XDirService.cpp  main.cpp
src/xms_disk_client_gui/doc/: 云盘客户端设计.md
src/xms_disk_client_gui/include/: FilePassword.h  TaskItemGui.h  TaskListGui.h  XDiskClientGui.h  XDownloadClient.h  XFileManager.h  XGetDirClient.h  XLoginGui.h  XMSFileManager.h  XUploadClient.h
src/xms_disk_client_gui/src/: FilePassword.cpp  TaskItemGui.cpp  TaskListGui.cpp  XDiskClientGui.cpp  XDownloadClient.cpp  XFileManager.cpp  XGetDirClient.cpp  XLoginGui.cpp  XMSFileManager.cpp  XUploadClient.cpp  file_password.ui  main.cpp  task_item_gui.ui  task_list_gui.ui  xdisk_client_gui.qrc  xdisk_client_gui.ui  xlogin_gui.ui  xms_disk_client_gui.rc
src/xms_dowaload_service/include/: XDownloadHandle.h  XDownloadServer.h
src/xms_dowaload_service/src/: XDownloadHandle.cpp  XDownloadServer.cpp  main.cpp
src/xms_gateway/: CMakeLists.txt
src/xms_gateway/include/: XAuthProxy.h  XRouteHandle.h  XRouteServer.h  XServiceProxy.h  XServiceProxyClient.h
src/xms_gateway/src/: XAuthProxy.cpp  XRouteHandle.cpp  XRouteServer.cpp  XServiceProxy.cpp  XServiceProxyClient.cpp  main.cpp
src/xms_upload_service/: CMakeLists.txt
src/xms_upload_service/doc/: 上传微服务.md
src/xms_upload_service/include/: XUploadHandle.h  XUploadService.h
src/xms_upload_service/src/: XUploadHandle.cpp  XUploadService.cpp  main.cpp
src/xmysql/: CMakeLists.txt
src/xmysql/include/: LXMysql.h  LXMysql_Global.h
src/xmysql/src/: LXMysql.cpp
src/xplatfrom/: CMakeLists.txt
src/xplatfrom/include/: XAuthClient.h  XComTask.h  XConfigAndRegister.h  XConfigClient.h  XLogClient.h  XMLog.h  XMsg.h  XMsgCom.pb.h  XMsgEvent.h  XMsgServer.h  XMsgType.pb.h  XPlatfrom_Global.h  XRegisterClient.h  XSSL.h  XSSL_CTX.h  XService.h  XServiceClient.h  XServiceHandle.h  XSingleton.h  XTask.h  XThread.h  XThreadPool.h  XTools.h
src/xplatfrom/src/: XAuthClient.cpp  XComTask.cpp  XConfigAndRegister.cpp  XConfigClient.cpp  XDiskCom.proto  XLogClient.cpp  XMLog.cpp  XMsgCom.pb.cc  XMsgCom.proto  XMsgEvent.cpp  XMsgType.pb.cc  XMsgType.proto  XRegisterClient.cpp  XSSL.cpp  XSSL_CTX.cpp  XService.cpp  XServiceClient.cpp  XServiceHandle.cpp  XThread.cpp  XThreadPool.cpp  XTools.cpp
src/xtest_pb_service/: CMakeLists.txt
src/xtest_pb_service/include/: XDirServiceHandle.h
src/xtest_pb_service/src/: XDirServiceHandle.cpp  main.cpp
src/xtest_service_client/: CMakeLists.txt
src/xtest_service_client/include/: XTestClient.h
src/xtest_service_client/src/: XTestClient.cpp  main.cpp
src/xtest_service_client_ssl/: CMakeLists.txt
src/xtest_service_client_ssl/include/: XTestClient.h
src/xtest_service_client_ssl/src/: XTestClient.cpp  main.cpp
src/xtest_xplatform_ssl/: CMakeLists.txt
src/xtest_xplatform_ssl/include/: XMySSLClient.h  XMySSLService.h  (+1 more)
(+5 files in other folders)
